--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,20 @@
 <resources>
     <string name="app_name">Foodisea</string>
+
+    <!-- Cliente main -->
+    <string name="btnProfile">boton perfil</string>
+    <string name="btnOrders">boton historial pedidos</string>
+    <!-- Colocar el nombre del usuario -->
+    <string name="welcome">¡Hola, %1$s! ¿Qué te gustaría pedir hoy?</string>
+    <string name="categorias">Categorías</string>
+    <string name="todas">Todas</string>
+    <!-- Colocar las distintas categorías -->
+    <string name="nombreCategoria">Postres</string>
+    <string name="restaurantes">Restaurantes</string>
+
+    <!-- Item restaurant -->
+    <string name="imgRest">Imagen del restaurante</string>
+    <string name="nameRest">Nombre del restaurante</string>
+    <string name="rateRest">X.Y</string>
+    <string name="catRest">Parrilladas - Marina - Postres</string>
 </resources>
