--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Foodisea</string>
+    <string name="img_description">Fotos spinner</string>
 
     <!-- Cliente main -->
     <string name="btnProfile">Boton perfil</string>
