--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <!-- Colocar el nombre del usuario -->
     <string name="welcome">¡Hola, John! ¿Qué te gustaría pedir hoy?</string>
     <string name="categorias">Categorías</string>
-    <string name="todas">Todas</string>
+    <string name="todas">Todos</string>
     <!-- Colocar las distintas categorías -->
     <string name="catPlatos">Platos</string>
     <string name="catBebidas">Bebidas</string>
